# rust_todo_api

./: Cargo.toml  README.md
migrations/2021-02-18-133833_create_tasks/: up.sql
migrations/2021-02-27-142240_add_done_to_tasks/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
todo_graphql/: Cargo.toml
todo_mysql/: Cargo.toml  README.md
todo_mysql/migrations/2021-02-27-142240_add_done_to_tasks/: down.sql
todo_mysql/src/: lib.rs  models.rs  schema.rs
