[package]
name = "rust_todo_api"
version = "0.1.0"
authors = ["yoshiharu2580 <yoshiharu2580@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.5", features = ["mysql"] }
dotenv = "0.15.0"
failure = "0.1.8"
